deploy/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sentinel-dns
  labels:
    app.kubernetes.io/part-of: sentinel-dns
    app.kubernetes.io/name: sentinel-dns
